# image_to_webp

./: README.md  main.py  pyproject.toml  requirements.txt  run.bat  setup.bat
image_to_webp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
